apps/go-app/service.yaml
apiVersion: v1
kind: Service
metadata:
    name: go-app-service
spec:
    type: ClusterIP
    selector:
        app: go-app
    ports:
        - port: 80
          targetPort: 8080
sops:
    age:
        - recipient: age17jre3swefxzhesekzztj2dt8hg6g9vsquyj9zm76mvjl7q8qwdsq9ppgmr
          enc: |
            -----BEGIN AGE ENCRYPTED FILE-----
            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBKWTZDTUVPU3ZqWTJLSmly
[...]
            F9JAtFr2szU5G0vEZ8t6ccHNGNQkFx6YDKthppJrDFUnZAyjAP63Rw==
            -----END AGE ENCRYPTED FILE-----
    lastmodified: "2025-09-06T16:49:08Z"
    mac: ENC[AES256_GCM,data:NSfn1By2sqYIIseYZWb/Xln8SQSNWr/3WCOtDM97cl2JnWzEB9ln/vp936RrbjDWwUXchMOgsatQIWiF2Tpn90HrkxmYhFgER6mkipxnn1a2bE12WIb4bBEj3y1LI/J1tV3Zj9X+8LmKruqr2FkQeo0zzCjtdBz8yyw+J9HaUYY=,iv:ujXXkpokaqLBIEZ9RlCJt+g88FfEeBRB/S2UqatLJaE=,tag:ojRYN53EYnqksZOFGOxW1A==,type:str]
    encrypted_regex: ^(data|stringData|image)$
    version: 3.10.2
